# esp_rs_cam_app

./: .gitignore  Cargo.toml  OV2640_Init_Reference.md  README.MD  espflash.toml  partitions.csv  stream.html
.cargo/: config.toml
crates/app/: Cargo.toml
crates/app/src/: errors.rs  lib.rs
crates/app/src/cam/: mod.rs
crates/app/src/wifi/: mod.rs
crates/ov2640/: Cargo.toml
crates/ov2640/src/: error.rs  lib.rs
