[package]
edition = "2021"
name    = "app"
version = "0.1.0"

[[bin]]
name = "app"
path = "./src/bin/main.rs"
test = false
bench = false

[lib]
test = false
bench = false


[dependencies]
defmt = "0.3.10"
embedded-io-async = "0.6.1"
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-hal = { version="1.0.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
  "psram",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
critical-section = "1.2.0"
embassy-executor = { version = "0.9.0" }
embassy-time = { version = "0.5.0"}
esp-rtos = { version = "0.2.0", features = ["esp32s3","embassy","esp-radio"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
ov2640 = { workspace = true }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt","esp32s3"] }
edge-dhcp = "0.7.0"
edge-nal = "0.6.0"
edge-nal-embassy = "0.8.1"
esp-radio = { version = "0.17.0", features = ["defmt", "esp32s3","wifi", "unstable","esp-alloc"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-net = { version = "0.8.0", features = [ "defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
